; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_actctx.c_strcmp_aw.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_actctx.c_strcmp_aw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @strcmp_aw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @strcmp_aw(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca [1024 x i32], align 16
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %18

10:                                               ; preds = %2
  %11 = load i32, i32* @CP_ACP, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = getelementptr inbounds [1024 x i32], [1024 x i32]* %6, i64 0, i64 0
  %14 = call i32 @MultiByteToWideChar(i32 %11, i32 0, i8* %12, i32 -1, i32* %13, i32 1024)
  %15 = load i32, i32* %4, align 4
  %16 = getelementptr inbounds [1024 x i32], [1024 x i32]* %6, i64 0, i64 0
  %17 = call i32 @lstrcmpW(i32 %15, i32* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %10, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32 @lstrcmpW(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
